[package]
name = "gumwood"
version = "0.1.0"
authors = ["Rob Warner <rwarner@grailbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.15"
