[package]
name = "gumwood"
version = "0.1.0"
authors = ["Rob Warner <rwarner@grailbox.com>"]
license = "MIT"
description = "Convert a GraphQL schema to Markdown"
readme = "README.md"
homepage = "https://github.com/hoop33/gumwood"
repository = "https://github.com/hoop33/gumwood"
keywords = ["cli", "graphql", "markdown"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.15"
titlecase = "1.1.0"
